--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="portfolio__item">
               <div class="portfolio__img">
                 <img
-                  src="/assets/images/portfolio-img_1.jpg"
+                  src="./assets/images/portfolio-img_1.jpg"
                   alt="portfolio-1"
                 />
               </div>
@@ -129,7 +129,7 @@
             <div class="portfolio__item">
               <div class="portfolio__img">
                 <img
-                  src="/assets/images/portfolio-img_2.jpg"
+                  src="./assets/images/portfolio-img_2.jpg"
                   alt="portfolio-2"
                 />
               </div>
@@ -141,7 +141,7 @@
             <div class="portfolio__item">
               <div class="portfolio__img">
                 <img
-                  src="/assets/images/portfolio-img_3.jpg"
+                  src="./assets/images/portfolio-img_3.jpg"
                   alt="portfolio-3"
                 />
               </div>
@@ -153,7 +153,7 @@
             <div class="portfolio__item">
               <div class="portfolio__img">
                 <img
-                  src="/assets/images/portfolio-img_4.jpg"
+                  src="./assets/images/portfolio-img_4.jpg"
                   alt="portfolio-4"
                 />
               </div>
@@ -165,7 +165,7 @@
             <div class="portfolio__item">
               <div class="portfolio__img">
                 <img
-                  src="/assets/images/portfolio-img_5.jpg"
+                  src="./assets/images/portfolio-img_5.jpg"
                   alt="portfolio-5"
                 />
               </div>
@@ -177,7 +177,7 @@
             <div class="portfolio__item">
               <div class="portfolio__img">
                 <img
-                  src="/assets/images/portfolio-img_6.jpg"
+                  src="./assets/images/portfolio-img_6.jpg"
                   alt="portfolio-6"
                 />
               </div>
@@ -291,7 +291,7 @@
           <div class="team-wrap">
             <div class="team__item">
               <div class="team__img">
-                <img src="/assets/images/team-1.jpg" alt="team-1" />
+                <img src="./assets/images/team-1.jpg" alt="team-1" />
               </div>
               <div class="team__item-text">
                 <h4 class="team__text-title">Kimberly Thompson</h4>
@@ -309,7 +309,7 @@
             </div>
             <div class="team__item">
               <div class="team__img">
-                <img src="/assets/images/team-1.jpg" alt="team-2" />
+                <img src="./assets/images/team-1.jpg" alt="team-2" />
               </div>
               <div class="team__item-text">
                 <h4 class="team__text-title">Rico Massimo</h4>
@@ -325,7 +325,7 @@
             </div>
             <div class="team__item">
               <div class="team__img">
-                <img src="/assets/images/team-1.jpg" alt="team-3" />
+                <img src="./assets/images/team-1.jpg" alt="team-3" />
               </div>
               <div class="team__item-text">
                 <h4 class="team__text-title">Uku Mason</h4>
@@ -349,10 +349,10 @@
       <div class="sponsors">
         <div class="container">
           <div class="sponsors-wrap">
-            <a class="sponsors__link" href="#"><img src="/assets/images/sponsor-1.png" alt="sponsors"></a>
-            <a class="sponsors__link" href="#"><img src="/assets/images/sponsor-2.png" alt="sponsors"></a>
-            <a class="sponsors__link" href="#"><img src="/assets/images/sponsor-3.png" alt="sponsors"></a>
-            <a class="sponsors__link" href="#"><img src="/assets/images/sponsor-4.png" alt="sponsors"></a>
+            <a class="sponsors__link" href="#"><img src="./assets/images/sponsor-1.png" alt="sponsors"></a>
+            <a class="sponsors__link" href="#"><img src="./assets/images/sponsor-2.png" alt="sponsors"></a>
+            <a class="sponsors__link" href="#"><img src="./assets/images/sponsor-3.png" alt="sponsors"></a>
+            <a class="sponsors__link" href="#"><img src="./assets/images/sponsor-4.png" alt="sponsors"></a>
           </div>
         </div>
       </div>
